# Hackaton-Mistral-Episen-Team

./: .env.local  .env.production  .gitignore  Dockerfile  alpic.json  main.py  pyproject.toml  requirements.txt  server.py  t.py  test.PY  test.py  test3.py  test4.py  test5.py
connectors/: ga4_connector.py  slack_connector.py  trello_connector.py
src/connectors/: teams_connector.py  trello_connector.py
src/handlers/: teams_handler.py  trello_handler.py
src/tools/: methods.py  mistarl.py
